Day 10, 2025 and some other optimizations.